# catboy-house-web

./: .gitignore  Cargo.toml  README.md  Rocket.toml  Shuttle.toml
assets/: 7.css  index.css
src/: config.rs  main.rs  oidc_client.rs  services.rs  user.rs
src/http/: mod.rs  oidc.rs  templates.rs  user.rs
templates/: index.html.hbs
