[package]
name = "catboy-house"
version = "0.1.0"
edition = "2021"

[dependencies]
openid = "0.15.0"
rand = "0.8.5"
rocket = { version = "0.5.1", features = ["secrets", "json"] }
rocket_dyn_templates = { version = "0.2.0", features = ["handlebars"] }
serde = { version = "1.0.210", features = ["derive"] }
shuttle-rocket = "0.48.0"
shuttle-runtime = "0.48.0"
tokio = "1.26.0"
url = "2.5.2"
log = "0.4.22"
